# not-grandmas-python

./: README.md  pyproject.toml  this-aint-your-grandmas-python.ipynb
data/: counties.txt
