[project]
name = "modern-python"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.1.0b1", 
    "pandas>=3.0.1,<4",
    "jupyter>=1.1.1",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.dependencies]
python = "3.14.*"
